# rossi-demo

./: .gitignore
common/experiment_manager/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
common/experiment_manager/src/: aff_labels_viz.cpp  main.cpp  main.cpp.bak  main2.cpp  test_look.cpp  test_perceptors.cpp  test_perceptors2.cpp
humanoid_aff_learning/icub_aff_learning/actionLib/: .cproject  .fuse_hidden0001676900000017  CMakeCache.txt  CMakeLists.txt  Makefile  actionLib  cmake_install.cmake  install_manifest.txt
humanoid_aff_learning/icub_aff_learning/actionLib/.svn/: all-wcprops  entries
humanoid_aff_learning/icub_aff_learning/actionLib/conf/: config.ini  hand_sequences.ini
humanoid_aff_learning/icub_aff_learning/al_robots/: .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  frames.gv
humanoid_aff_learning/icub_aff_learning/al_robots/.svn/: all-wcprops  entries
humanoid_aff_learning/icub_aff_learning/al_robots/conf/: icub_self_filter.yaml  self_filter.yaml
humanoid_aff_learning/icub_aff_learning/al_robots/defs/: human.urdf.xacro  human_no_elbow.urdf.xacro  human_problematic.urdf.xacro  icub.urdf  icub.urdf.xacro  icub.urdf.xacro.2  pr2_with_sr4k.urdf.xacro
humanoid_aff_learning/icub_aff_learning/al_robots/launch/: human_self_filter.launch  human_state_publisher.launch  icub.launch  robot_self_filter.launch  spawned_human_self_filter.launch
humanoid_aff_learning/icub_aff_learning/al_robots/src/: human_js_pub.cpp  human_tf_publisher.cpp  main.cpp  torso_shoulders_box_st_pub.cpp
humanoid_aff_learning/icub_aff_learning/behaviorManager.bak/: .cproject  .fuse_hidden0000830700000003  .fuse_hidden000083960000000e  .fuse_hidden000141f200000025  .project  CMakeCache.txt  CMakeLists.txt  Makefile  app-BehaviorManager.cmake  app-behaviorManager.cmake  behaviorManager  cmake_install.cmake
humanoid_aff_learning/icub_aff_learning/behaviorManager.bak/.svn/: entries
humanoid_aff_learning/icub_aff_learning/behaviorManager.bak/include/: BehaviorModule.h
humanoid_aff_learning/icub_aff_learning/behaviorManager.bak/src/: BehaviorModule.cpp  main.cpp
humanoid_aff_learning/icub_aff_learning/behavior_manager_asil/: CMakeCache.txt  CMakeLists.txt  Makefile  app-behavior_manager.cmake  app-behavior_manager_asil.cmake  cmake_install.cmake  ports.db
humanoid_aff_learning/icub_aff_learning/behavior_manager_asil/exp1/: effect_0@1320488982.svm.data  effect_0@1320489402.svm.data  effect_0@1320490168.svm.data  effect_0@1320490636.svm.data  effect_0@1320490938.svm.data  effect_0@1320491187.svm.data  effect_0@1320491534.svm.data  effect_0@1320492042.svm.data  effect_0@1320498123.svm.data  effect_0@1320498949.svm.data  effect_0@1320504747.svm.data  effect_0@1320505452.svm.data  effect_0@1320506798.svm.data  effect_0@1320507703.svm.data  effect_0@1320509226.svm.data  effect_0@1320509393.svm.data  effect_1@1320506846.svm.data  head_0@1320490739.svm.data  head_0@1320490831.svm.data  head_0@1320491005.svm.data  head_0@1320491071.svm.data  head_0@1320491298.svm.data  head_0@1320491534.svm.data  head_0@1320491635.svm.data  head_0@1320492042.svm.data  head_0@1320492109.svm.data  head_0@1320497744.svm.data  head_0@1320497802.svm.data  head_0@1320498123.svm.data  head_0@1320498193.svm.data  head_0@1320498359.svm.data  head_0@1320498476.svm.data  head_0@1320500579.svm.data  head_12@1320488709.svm.data  head_12@1320489064.svm.data  head_12@1320489157.svm.data  head_12@1320489339.svm.data  head_12@1320489370.svm.data  head_12@1320489401.svm.data  head_12@1320489728.svm.data  (+176 more)
humanoid_aff_learning/icub_aff_learning/behavior_manager_asil/exp2/: effect_0@1320512370.svm.data  effect_0@1320513105.svm.data  head_0@1320512370.svm.data  head_0@1320512515.svm.data  head_0@1320512569.svm.data  head_0@1320512729.svm.data  head_0@1320512842.svm.data  head_0@1320512995.svm.data  head_0@1320513105.svm.data  head_0@1320513287.svm.data  head_0@1320513843.svm.data  head_12@1320512369.svm.data  head_12@1320512544.svm.data  head_12@1320512745.svm.data  head_12@1320512842.svm.data  head_12@1320513051.svm.data  head_12@1320513105.svm.data  head_12@1320513319.svm.data  head_12@1320513461.svm.data  head_12@1320513627.svm.data  head_12@1320513689.svm.data  head_12@1320513882.svm.data  head_12@1320513909.svm.data  head_6@1320513910.svm.data  head_6@1320513921.svm.data  object_0@1320512370.svm.data  object_0@1320512842.svm.data  object_0@1320513105.svm.data  object_0@1320513910.svm.data  right_arm_0@1320512370.svm.data  right_arm_0@1320512515.svm.data  right_arm_0@1320512569.svm.data  right_arm_0@1320512729.svm.data  right_arm_0@1320512842.svm.data  right_arm_0@1320512995.svm.data  right_arm_0@1320513105.svm.data  right_arm_0@1320513287.svm.data  right_arm_0@1320513462.svm.data  right_arm_0@1320513590.svm.data  right_arm_0@1320513690.svm.data  (+18 more)
humanoid_aff_learning/icub_aff_learning/behavior_manager_asil/exp_push_forward/: effect_0@1320668285.svm.data  effect_0@1320676436.svm.data  effect_0@1320676816.svm.data  effect_0@1320677279.svm.data  effect_0@1320677680.svm.data  effect_0@1320678056.svm.data  effect_0@1320678283.svm.data  effect_0@1320679285.svm.data  effect_0@1320679473.svm.data  effect_1000@1320679085.svm.data  head_12@1320676799.svm.data  head_2@1320676227.svm.data  head_2@1320676354.svm.data  head_2@1320676777.svm.data  head_2@1320677047.svm.data  head_2@1320677636.svm.data  head_2@1320678021.svm.data  head_2@1320678557.svm.data  head_2@1320678782.svm.data  (+52 more)
humanoid_aff_learning/icub_aff_learning/frictionTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  find  hideSwap  operate  search
humanoid_aff_learning/icub_aff_learning/portWriter/: .project  CMakeLists.txt  portWriter
humanoid_aff_learning/icub_aff_learning/tabletop_2D_segmentation/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
humanoid_aff_learning/icub_aff_learning/test_manager (copy)/: CMakeCache.txt  CMakeLists.txt  app-behaviorManager.cmake
(+1977 files in other folders)
