CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(PROJECTNAME tutorials)

PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_MODULE_PATH})
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ICUB_MODULE_PATH})
INCLUDE(iCubOptions)
INCLUDE(iCubHelpers)

INCLUDE_DIRECTORIES(${ICUB_INCLUDE_DIRS}
                    ${YARP_INCLUDE_DIRS})
					
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")					

# Create everything needed to build our executable.
ADD_EXECUTABLE(search search.cpp)
ADD_EXECUTABLE(find find.cpp)
ADD_EXECUTABLE(operate operate.cpp)
ADD_EXECUTABLE(hideSwap hideSwap.cpp)

TARGET_LINK_LIBRARIES(search ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(find ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(operate ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(hideSwap ${YARP_LIBRARIS} icubmod)



